lançamento versão ALPHA